<resources>
    <string name="app_name">LembreteLivros</string>

    <string name="label_name_book_list">Nome:&#160;</string>
    <string name="label_pages_book_list">N°. Páginas:&#160;</string>
    <string name="no_books_text_view">Nenhum livro cadastrado</string>

    <string name="menu_add_button">Adicionar</string>

    <string name="save_button">Salvar</string>
    <string name="book_name_hint">Nome</string>
    <string name="book_pages_hint">Número de páginas</string>

    <string name="message_text_missing">É preciso preencher todos os dados para salvar</string>
    <string name="label_data">Dados</string>
    <string name="label_reminder">Lembretes</string>

    <string name="date_picker_title">Data do lembrete</string>
    <string name="time_picker_title">Hora do lembrete</string>
    <string name="label_date_reminder_list">Data:</string>
    <string name="label_time_reminder_list">Hora:</string>
</resources>
